--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -28,8 +28,7 @@
 
 !                           Jobs To-Do: 
 
-todo    -) scrollbar rechts am starting Bildschirm muss weg, sonst funktioniert das Menu ästhetisch nicht mehr.
-todo    -) test and repair responsivness in all sizes! -> menu muss von der Seite weg!
+todo    -) test and repair responsivness in all sizes! -> menu muss von der Seite weg?
 todo    -) CSS-Code minimizing f.e. bind repetative classes to one class!
 todo    -) INGAME section?
 todo    -) fonts!
@@ -1154,141 +1153,6 @@ select:hover {
 
 /* #region 11) media queries */
 
-@media (max-width: 767.98px) {
-  body {
-    max-width: 100vw;
-    overflow-x: hidden;
-    overflow-y: auto;
-  }
-
-  .Class_MainWrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .Class_HeadlineTop {
-    text-align: center;
-    margin-top: 3rem;
-  }
-
-  .Class_GameboardWrapper {
-    min-width: 75vw;
-    min-height: 50vw;
-  }
-
-  .Class_Gameboard_Wrapper_InGame {
-    min-width: 100%;
-    margin-top: 0%;
-  }
-
-  .Class_Settings_Menu {
-    position: absolute;
-    right: 46vw;
-    top: 2vh;
-    filter: invert(1);
-  }
-  .naming__span {
-    display: inline-block;
-    justify-content: center;
-    align-content: center;
-    justify-items: center;
-    align-items: center;
-  }
-
-  .name_svgs {
-    margin-block: 1rem;
-  }
-
-  #player1_name__input {
-    min-width: 100%;
-  }
-
-  #player2_name__input {
-    min-width: 100%;
-  }
-
-  #leftSidebar__wrapper {
-    width: 100%;
-    margin-block: 2rem;
-  }
-  #sidebarRight__wrapper {
-    width: 100%;
-    margin-block: 2rem;
-    margin-bottom: 1rem;
-  }
-
-  .Class_Turn_Players {
-    display: flex;
-    min-width: 100%;
-    margin-bottom: 5%;
-    margin-top: 3%;
-    text-align: center;
-    justify-content: center;
-    align-content: center;
-  }
-  .Class_Left_Pos {
-    bottom: 0;
-  }
-  .Class_Right_Pos {
-    bottom: 0;
-  }
-
-  #start__button {
-    min-width: 30%;
-    margin-bottom: 5%;
-  }
-
-  #settings_span {
-    overflow: hidden;
-  }
-
-  /* Gaḿe End Screen Mobile*/
-               /* Move Gameboard at the End of the Game Animation */
-  .Class_Gameboard_End {
-    transform: scale(0.5);
-  }
-
-  /*
-  .topCellsCanvas {
-    display: none;
-  }
-*/ 
-  
-  #button__newGame {
-    min-width: 40%;
-  }
-
-  #button__startingScreen {
-    min-width: 40%;
-  }
-
-  #button__gameEnd {
-    margin-block: 2rem;
-  }
-
-  /* Win Marks */
-  #div__wonGames {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    min-width: 3rem;
-    min-height: 2rem;
-    display: flex;
-    align-items: flex-end;
-  }
-
-  #div__wonGames_P2 {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    min-width: 3rem;
-    min-height: 2rem;
-    display: flex;
-    align-items: flex-end;
-  }
-}
 
 /* #endregion*/
 
