--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -28,21 +28,22 @@
 
 !                           Jobs To-Do: 
 
-todo    -) test and repair responsivness in all sizes! -> menu muss von der Seite weg?
-todo    -) CSS-Code minimizing f.e. bind repetative classes to one class!
-todo    -) INGAME section?
-todo    -) fonts!
-todo    -) font working on all browser correctly?
-todo    -) find a final, real good styling!
+todo    test and repair responsivness in all sizes! -> menu muss von der Seite weg?
+todo    CSS-Code minimizing f.e. bind repetative classes to one class!
+todo    INGAME section?
+todo    fonts!
+todo    font working on all browser correctly?
+todo    find a final, real good styling!
 
 ?                               Finish
-todo    -)) CSS-Guideline
-todo    -) Take a look at the Bonus Jobs - maybe you have enough passion to do one :-)
-todo    -) Find ID"s mitz gemeinsamen properties und füge sie zu Klassen hinzu - wenn es Sinn macht!
-todo    -) Final formatation (especially script & library sections/functions), comments:
-todo    -) Make sure all important is commented !
-todo    -) Write a final Comment !
-todo    -) Save Default Script Files with the new Script Layout for later Projects. Also the index with the all new Toggle Slider and make a new "global" Library for JS & CSS !
+todo    css-duideline
+todo    table of content update
+todo    Take a look at the Bonus Jobs - maybe you have enough passion to do one :-)
+todo    Find ID"s mitz gemeinsamen properties und füge sie zu Klassen hinzu - wenn es Sinn macht!
+todo    Final formatation (especially script & library sections/functions), comments:
+todo    Make sure all important is commented !
+todo    Write a final Comment !
+todo    Save Default Script Files with the new Script Layout for later Projects. Also the index with the all new Toggle Slider and make a new "global" Library for JS & CSS !
 
 !                         Session progress:                                                
 ? -)                                                                                                                                                                                             
@@ -222,7 +223,7 @@ header {
 
 /* left sidebar start game content */
 
-#choosing_cpu {
+#wrapper__choosingCPU {
 min-width: 100%;
 display: flex;
 flex-direction: column;
@@ -243,7 +244,7 @@ border-bottom: solid 1px var(--base-border);
 ?     gameboard 
             ========= */
 
-.Class_GameboardWrapper {
+.gameboard {
   grid-area: gameboard;
   display: flex;
   background-color: var(--gameboard);
@@ -255,7 +256,7 @@ border-bottom: solid 1px var(--base-border);
   border-top: none;
 }
 
-.Class_GameboardWrapper[data-inGame="yes"] {
+.gameboard[data-inGame="yes"] {
     position: absolute;
     top: 20%;
     left: 50%;
@@ -264,7 +265,7 @@ border-bottom: solid 1px var(--base-border);
     aspect-ratio: 1/1;
 }
 
-.Class_GameboardWrapper[data-inGame="gameend"] {
+.gameboard[data-inGame="gameend"] {
     margin-block: 2rem;
 }
 /* #endregion */
@@ -602,7 +603,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* #endregion */
 
-/* #region 7) game-screen*/
+/* #region 5) game-screen*/
 
 /* ===========
 ?     win notifications
@@ -655,7 +656,7 @@ h1, h2, h3, h4, h5, h6 {
             
             /* #endregion*/
             
- /*#region 9) game-end screen */
+ /*#region 6) game-end screen */
 
 #section__main[data-gameend = "yes"],
 #section__main[data-canvasend = "yes"]{
@@ -704,7 +705,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* #endregion */
          
-/* #region 5) typographie */
+/* #region 7) typographie */
 
 #h__turnDiv {
   width: 10rem;
@@ -713,7 +714,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 /* #endregion */
 
-/* #region 6) inputs, buttons, dropdowns, etc...  */
+/* #region 8) inputs, buttons, dropdowns, etc...  */
 
 /* ========
 ?     inputs: text
@@ -831,7 +832,7 @@ select:hover {
 
 /* #endregion */
 
-/* #region 8) animations & transitions */
+/* #region 9) animations & transitions */
 
 /*#region  choosing coin animations */
 
@@ -1159,29 +1160,28 @@ select:hover {
     max-width: 100vw;
     overflow-x: hidden;
     overflow-y: auto;
+    text-align: center;
   }
+
+  header  h1 {
+      font-size: xx-large;
+  }
+
+ header p{
+      font-size: large;
+ }
 
   #section__main {
     display: flex;
     flex-direction: column;
   }
 
-  #gameboard__wrapper {
-    min-width: 75vw;
-    min-height: 50vw;
+  .sidebars{
+    margin-top: 0;
+    border: none;
+    align-items: center;
   }
 
-  #gameboard__wrapper[data-ingame = "yes"] {
-    min-width: 100%;
-    margin-top: 0%;
-  }
-
-  .Class_Settings_Menu {
-    position: absolute;
-    right: 46vw;
-    top: 2vh;
-    filter: invert(1);
-  }
   .naming__span {
     display: inline-block;
     justify-content: center;
@@ -1192,35 +1192,14 @@ select:hover {
 
   .name_svgs {
     margin-block: 1rem;
+    position: relative;
+    left: 35%;
   }
 
-  #input__player1_name {
-    min-width: 100%;
+  #wrapper__choosingCPU{
+    border: none;
   }
 
-  #input__player2_name {
-    min-width: 100%;
-  }
-
-  #wrapper__leftSidebar {
-    width: 100%;
-    margin-block: 2rem;
-  }
-  #wrapper__rightSidebar {
-    width: 100%;
-    margin-block: 2rem;
-    margin-bottom: 1rem;
-  }
-
-  .Class_Turn_Players {
-    display: flex;
-    min-width: 100%;
-    margin-bottom: 5%;
-    margin-top: 3%;
-    text-align: center;
-    justify-content: center;
-    align-content: center;
-  }
   .Class_Left_Pos {
     bottom: 0;
   }
@@ -1239,9 +1218,6 @@ select:hover {
 
   /* Gaḿe End Screen Mobile*/
                /* Move Gameboard at the End of the Game Animation */
-  .Class_Gameboard_End {
-    transform: scale(0.5);
-  }
 
   /*
   .topCellsCanvas {
