--- a/Folder_CSS/mycssguideline.css
+++ b/Folder_CSS/mycssguideline.css
@@ -15,7 +15,8 @@ https://developer.chrome.com/docs/devtools/
 -) Wichtig: Um alle Browser anzugleichen, bei Designgruppen outline wegnehmen und dann für alle einen hover & focus machen!
 -) Chrome Dev Tools das Element auswählen, Button (links oben) nutzen um zb.: Text Kontrast ablesen zu können !
 -) Visbug nutzen!
--) Benutze '' statt "", dann ist es leichter dem User die Möglichkeit "" zu geben
+-) //unsplah.it/740/740 generiert random image mit 740x740
+-) vor allem { ein Leerzeich setzen trägtt zur beserren Lesbarkeit bei! 
 
 
 ?         CSS
@@ -27,11 +28,24 @@ todo box-sizing
         *, *::before, *::after  {box-sizing: border-box} nimmt alle width-heights von den bordern weg - agieren wie outline, aber in den Richtungen steuerbar.
 todo div
         Default kein margin.
+
+todo    position: absolute / relative
+      bei absolute ist die element height die tatsächliche height und nicht relativ zum parent
+https://www.youtube.com/watch?v=lUaw-AA9HnA&t=607s
+
 todo    height
    height wirkt sich nur aus wenn parent auch eine explizite height-value gesetzt hat.
    height: 100%;  Der Prozentwert bezieht sich auf das parent-Element. Wenn parent body{} ist und sonst kein Element angehängt ist, ist der Container (body) klein!
    height: auto; Ist der Defaultwert und aus responsiven Gründen immer vorzuziehen wenn es geht. Ansonsten min-height - height: px; nur dann, wenn es sein muss!
 https://www.youtube.com/watch?v=SjYYfd7obug&t=272s
+
+todo        min, max
+width: min(500px, 70%); ist das gleiche wie width; 70%; max-width: 500px => es sucht die kleinste value von beiden und nimmt diese. max () ist genau umgekehrt und es such die größte value.
+clamp()
+calc() ist nicht nötig, man kann darin rechnen. in min() und max() sind auch mehrere values möglich
+https://www.youtube.com/watch?v=U9VF-4euyRo&t=124s
+
+
 todo     border
     border: 0; entfernt die border width.
 todo     margin
@@ -43,6 +57,7 @@ todo     Buttons
     Hat ein Button einen border, kannst du dem anderen einen Border in der Farbe seines Hintergrundes geben damit die width/height ausgeglichen wird.
 
 todo em / rem
+      em bezieht sich auf die textgröße im container, rem auf die des root elements. bsp.: setz ich in einem parent container die font size auf 2em dann ist im child 1em auf einmal 2em und 2em dann wiederm 4em. das nennt nman compounding => zuasammensetzen.
     Für Fonst-Size eher rem, für padding/margin eher em --> rem bleibt immer gleich solange root 16px bleibt , bei em wird das margin/paddingh höher wenn man die font size des elements  größer wird 
       rem= follow the device pre-assigned font-size      em= follow your font-size parent,
       normally the parent is <body>, if is not modified by you, it will be like 16px (depends on the browser)
@@ -71,7 +86,12 @@ todo em / rem
       the first div have 2em size;
       second 4em;
       third 8em
-      because everyone is parent, so use IDs or class               
+      because everyone is parent, so use IDs or class   
+      
+https://www.youtube.com/watch?v=_-aDOAMmDHI&t=402s
+
+todo line-heigt
+      line-height: 1; verhindert das der Text  mit Änderung der height des Containers mitwächst.
 
 todo        BEM
       Bei der Block Elements Modiyfier-Schreibweise schreibt man Elemente mit doppelten Unterstrich z.b.: .div__card . Sinn ist, dass 
@@ -205,6 +225,9 @@ h1:has(+ p)
 
 ?                                   Vorlagen & Tipps
 
+todo        sher schöne cards mit "titel schneidet durch cards" effect
+https://www.youtube.com/watch?v=lUaw-AA9HnA&t=607s
+
 todo        click-jumping in document
 html {
   scroll-behavior: smooth;
@@ -245,12 +268,12 @@ box-shadow: 0em 0em 2em orangered;
 
 /*
 -) Trenner:
-     / =======  
-!        Functions
-           ======== /
-     / =======  
-?        Headlines
-           ======== /     
+     /*  ===============  
+!         ===  Functions  ===
+          ===============  */
+     /*  ===============  
+?        ===  Headlines  ===
+          ===============  */
  */
                
 /* #region media queries */ /*
