--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -27,7 +27,7 @@
 /*
 
 !                           to-do 
-todo    Settings Menu Button for smart screens & getting  rid of my resize solution and only give them sm class if over 700px
+todo    start game button for smart screens
 todo    text-shadows für titel?
 todo    css-code minimizing f.e. bind repetative classes to one class!
 todo    INGAME section?
