--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -27,7 +27,10 @@
 /*
 
 !                           to-do 
+?                     responsive
 todo    start game button for smart screens
+todo    new window position
+
 todo    text-shadows für titel?
 todo    css-code minimizing f.e. bind repetative classes to one class!
 todo    INGAME section?
