--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -225,25 +225,6 @@ header {
   filter: invert(1);
 }
 
-/* left sidebar start game content */
-
-#wrapper__choosingCPU {
-min-width: 100%;
-display: flex;
-flex-direction: column;
-align-items: center;
-gap: 1em;
-padding-bottom: 2em;
-border-bottom: solid 1px var(--base-border);
-}
-
-#wrapper__choosingCPU h3{
-  display: flex;
-  justify-content: center;
-  font-size: x-large;
-  margin-top: 1em;
-}
-
      /*  ================  
 ?        ===  Gameboard  ===
           ================  */
@@ -476,31 +457,28 @@ border-bottom: solid 1px var(--base-border);
 #colour_slider{
   background-color: yellow;
   height: 100%;                 
-  width: 23%;
-  border-radius: 20%;
-  box-shadow: 0 0 1em black;
+  width: 50%;
 }
 
 #button__toggle {
   cursor: pointer;
-  background-color: var(--base-colour);
-  width: 1em;
-  height: 1em;
+  background-color: white;
+  box-shadow: 0 0 .5rem black;
+  width: 1rem;
+  aspect-ratio: 1/1;
+  margin-block: 1px;
   border-radius: 50%;
   transition: all 2s;
 }
 
 #button__toggle:hover {
-  background-color: var(--gameboard);
+  background-color: var(--base-colour);
 }
 
 .toggle__colour {
-  transform: translateX(2rem);
+  transform: translateX(2.8rem);
 }
 
-#checkbox__sound:hover {
-  box-shadow: none;
-}
  
 #select__language {
   cursor: pointer;
@@ -560,10 +538,6 @@ details[open] p {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Comforter Brush", cursive;
   margin-bottom:  .2em;
-}
-
-#choosing_cpu_headline{
- font-size: large;
 }
 
 #info_h,
@@ -706,36 +680,13 @@ h1, h2, h3, h4, h5, h6 {
   border: dashed 0.3rem var(--base-border);
   padding: 1rem;
 }
+
+#choosing_cpu_headline{
+ font-size: large;
+}
 /* #endregion */
 
 /* #region 8) inputs, buttons, dropdowns, etc...  */
-
-     /*  ===============  
-?        ===  inputs text  ===
-          ===============  */
-
-input {
-  width: 19ch;
-  max-width: 80%;
-  height: 2rem;
-  text-align: center;
-  cursor: pointer;
-  box-shadow: 0 0 1rem black;
-  border: none;
-  font-family: "Bebas Neue", cursive;
-}
-
-input:hover {
-  background-color: var(--prime-darkgrey);
-  color: var(--base-border);
-  box-shadow: inset 0 0 1rem white;
-}
-
-input:focus {
-  background-color: var(--prime-darkgrey);
-  color: var(--base-border);
-  box-shadow: inset 0 0 1rem white;
-}
 
      /*  =============  
 ?        ===  buttons  ===
@@ -743,7 +694,6 @@ input:focus {
 
 button {
   cursor: pointer;
-  border-radius: 10%;
   box-shadow: 0 0 1rem black;
   border: none;
   font-family: "Bebas Neue", cursive;
@@ -752,7 +702,11 @@ button {
 button:hover {
   background-color: var(--prime-darkgrey);
   color: var(--base-border);
-  box-shadow: inset 0 0 1rem white;
+  box-shadow: inset 0 0 1.5rem white;
+}
+
+#button__start{
+  min-width: 24%;
 }
 
 #reset_easy {
@@ -775,8 +729,54 @@ button:hover {
   margin: 1rem;
 }
 
+
+
+     /*  ===============  
+?        ===  inputs  ===
+          ===============  */
+
+input[type=text] {
+  width: 19ch;
+  max-width: 80%;
+  height: 2rem;
+  text-align: center;
+  cursor: pointer;
+  border: none;
+}
+
+input[type=number] {
+    background-color: lightgrey;
+    border: none;
+    text-align: center;
+}
+
+input[type=checkbox]{
+  height: 2rem; 
+  aspect-ratio: 1/1;
+}
+
+input:hover, input:focus, input:active {
+  color: var(--base-colour);
+  border: solid 2px var(--base-colour);
+}
+
+
+/* get away with the default red borders on input */
+input {
+    box-shadow:none;
+    border: 0;
+    outline:none;
+}
+
+input:focus:invalid {
+    box-shadow:none;
+    border: 2px solid red !important;
+    outline:none;
+}
+
+
      /*  ================  
-?        ===  Dropdowns  ===
+?        ===  select  ===
           ================  */
 
 select {
@@ -785,10 +785,8 @@ select {
   -ms-text-align-last: center;
   -moz-text-align-last: center;
   cursor: pointer;
-  border-radius: 10%;
-  box-shadow: 0 0 1rem black;
-  border: none;
   font-family: "Bebas Neue", cursive;
+  font-size: large;
 }
 
 select:hover {
@@ -797,17 +795,34 @@ select:hover {
   box-shadow: inset 0 0 1rem white;
 }
 
+/* left sidebar start game content */
+
 #select__choosing_cpu {
-  min-height: rem;
-  border-radius: 10rem;
+  min-height: 1rem;
+}
+
+#wrapper__choosingCPU {
+min-width: 100%;
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 1em;
+padding-bottom: 2em;
+border-bottom: solid 1px var(--base-border);
+}
+
+#wrapper__choosingCPU h3{
+  display: flex;
+  justify-content: center;
+  font-size: x-large;
+  margin-top: 1em;
 }
 
      /*  ===============  
 ?        ===  summarys  ===
           ===============  */
 
-.summary__details
- {
+.summary__details {
   margin-top: 1em;
 }
 
@@ -1231,6 +1246,15 @@ select:hover {
   aspect-ratio: 1/1;
   
 }
+
+input:hover,
+button:hover,
+select:hover {
+  background-color:var(--base-border);
+  color: black;
+  box-shadow: none;
+}
+
 /*#endregion*/
 
   /* Gaḿe End Screen */
